# pi_menu

./: .gitignore  LICENSE  README.md  README_EN.md  build_release.sh  config.json  create_distribution.sh  custom_icons.json  pyproject.toml  recent_apps.json  requirements.txt
Casks/: pi-menu.rb
icon_assets/custom/: pimenu_icon.icns
pi_menu/: app.py  generate_configfile.py  main.py  main_backup.py  main_safe.py
pi_menu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
